fix alignment of q-nav-bar so it falls directly under quill on every page

--- a/client/app/assets/styles/navbar.scss
+++ b/client/app/assets/styles/navbar.scss
@@ -1,6 +1,6 @@
 .q-nav-bar {
   margin: auto;
-  max-width: 1165px;
+  max-width: 965px;
   ul {
     display: flex;
     flex-wrap: wrap;
